# LEDVANCE_BLE_MESH

./: .gitignore  CMakeLists.txt  README.md  sdkconfig example
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  ethernet_setup.c  ethernet_setup.h  http_server.c  http_server.h  lamp_nvs.c  lamp_nvs.h  main.c  main.h  wifi_setup.c
web/: index.html
